--- a/TrafficSegues/Base.lproj/Main.storyboard
+++ b/TrafficSegues/Base.lproj/Main.storyboard
@@ -29,6 +29,9 @@
                                 <state key="normal" title="Click Me Baby!">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <segue destination="wCB-gQ-cZC" kind="show" id="SoW-iQ-m3s"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="0.63025129899546428" blue="0.62359508225438109" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -50,13 +53,44 @@
                     <view key="view" contentMode="scaleToFill" id="jQ3-c0-izZ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tbB-1P-bcl">
+                                <rect key="frame" x="119" y="313" width="136" height="41"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="24"/>
+                                <state key="normal" title="MOAR WIN!">
+                                    <color key="titleColor" red="1" green="0.087503309729616174" blue="0.085053081061316593" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <segue destination="F26-XE-Ddb" kind="show" id="wXt-ah-YK8"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="0.92740175690000004" blue="0.63053974160000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="tbB-1P-bcl" firstAttribute="centerX" secondItem="jQ3-c0-izZ" secondAttribute="centerX" id="ClI-cQ-qKG"/>
+                            <constraint firstItem="tbB-1P-bcl" firstAttribute="centerY" secondItem="jQ3-c0-izZ" secondAttribute="centerY" id="tnn-lu-Yd7"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="LYT-5d-wW7"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Irh-BJ-KaQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="847" y="133"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="jSC-dV-sqw">
+            <objects>
+                <viewController id="F26-XE-Ddb" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="OzU-Sz-nWH">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.79289417709999999" green="1" blue="0.55411097099999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <viewLayoutGuide key="safeArea" id="W7G-HG-61f"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2n9-nQ-Vwv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1513" y="133"/>
         </scene>
     </scenes>
 </document>
