--- a/TrafficSegues/Base.lproj/Main.storyboard
+++ b/TrafficSegues/Base.lproj/Main.storyboard
@@ -49,7 +49,7 @@
             </objects>
             <point key="canvasLocation" x="476" y="132.68365817091455"/>
         </scene>
-        <!--View Controller-->
+        <!--Yellow-->
         <scene sceneID="7U7-Xf-sDD">
             <objects>
                 <viewController id="wCB-gQ-cZC" sceneMemberID="viewController">
@@ -75,12 +75,13 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="LYT-5d-wW7"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Yellow" id="05j-nJ-iZR"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Irh-BJ-KaQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1184.8" y="132.68365817091455"/>
         </scene>
-        <!--View Controller-->
+        <!--Green-->
         <scene sceneID="jSC-dV-sqw">
             <objects>
                 <viewController id="F26-XE-Ddb" sceneMemberID="viewController">
@@ -106,6 +107,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="W7G-HG-61f"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Green" id="fjJ-C6-fph"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2n9-nQ-Vwv" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="PQ5-g2-SKd" userLabel="Exit" sceneMemberID="exit"/>
@@ -121,6 +123,10 @@
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="tintColor" red="0.72403603792190552" green="0.35743623903896177" blue="0.38542722461757961" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <fontDescription key="fontDescription" name="ChalkboardSE-Regular" family="Chalkboard SE" pointSize="28"/>
+                            <color key="textColor" red="0.7578125" green="0.33444251058468116" blue="0.33438708337618411" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
