--- a/TrafficSegues/Base.lproj/Main.storyboard
+++ b/TrafficSegues/Base.lproj/Main.storyboard
@@ -88,27 +88,15 @@
                     <view key="view" contentMode="scaleToFill" id="OzU-Sz-nWH">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EMs-1h-qnT">
-                                <rect key="frame" x="142" y="313" width="91" height="41"/>
-                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="24"/>
-                                <state key="normal" title="Dismiss">
-                                    <color key="titleColor" red="0.29411764709999999" green="0.46274509800000002" blue="0.66666666669999997" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
-                                <connections>
-                                    <segue destination="PQ5-g2-SKd" kind="unwind" unwindAction="unwindToRedWithUnwindSegue:" id="GMu-Tv-YgS"/>
-                                </connections>
-                            </button>
-                        </subviews>
                         <color key="backgroundColor" red="0.79289417709999999" green="1" blue="0.55411097099999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstItem="EMs-1h-qnT" firstAttribute="centerX" secondItem="OzU-Sz-nWH" secondAttribute="centerX" id="gx7-Zq-wju"/>
-                            <constraint firstItem="EMs-1h-qnT" firstAttribute="centerY" secondItem="OzU-Sz-nWH" secondAttribute="centerY" id="vmj-YA-JPQ"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="W7G-HG-61f"/>
                     </view>
                     <navigationItem key="navigationItem" title="Green" id="fjJ-C6-fph">
-                        <barButtonItem key="rightBarButtonItem" title="Pop" id="tLx-uQ-5KO"/>
+                        <barButtonItem key="rightBarButtonItem" title="Pop" id="tLx-uQ-5KO">
+                            <connections>
+                                <segue destination="PQ5-g2-SKd" kind="unwind" unwindAction="unwindToRedWithUnwindSegue:" id="MDy-VR-UaV"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2n9-nQ-Vwv" userLabel="First Responder" sceneMemberID="firstResponder"/>
