--- a/TrafficSegues/Base.lproj/Main.storyboard
+++ b/TrafficSegues/Base.lproj/Main.storyboard
@@ -109,13 +109,17 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="k2O-Fc-CXe" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="zeh-1b-Wpm">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="zeh-1b-Wpm">
+                        <rect key="frame" x="0.0" y="20" width="375" height="106.5"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="tintColor" red="0.72403603792190552" green="0.35743623903896177" blue="0.38542722461757961" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <textAttributes key="titleTextAttributes">
-                            <fontDescription key="fontDescription" name="ChalkboardSE-Regular" family="Chalkboard SE" pointSize="28"/>
+                            <fontDescription key="fontDescription" name="ChalkboardSE-Regular" family="Chalkboard SE" pointSize="22"/>
                             <color key="textColor" red="0.7578125" green="0.33444251058468116" blue="0.33438708337618411" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </textAttributes>
+                        <textAttributes key="largeTitleTextAttributes">
+                            <fontDescription key="fontDescription" name="ChalkboardSE-Regular" family="Chalkboard SE" pointSize="41"/>
+                            <color key="textColor" red="0.7578125" green="0.33444251060000002" blue="0.33438708340000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
