set large titles for yellow nad green vc to never and automatic

--- a/TrafficSegues/Base.lproj/Main.storyboard
+++ b/TrafficSegues/Base.lproj/Main.storyboard
@@ -75,7 +75,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="LYT-5d-wW7"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Yellow" id="05j-nJ-iZR"/>
+                    <navigationItem key="navigationItem" title="Yellow" largeTitleDisplayMode="never" id="05j-nJ-iZR"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Irh-BJ-KaQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
